--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,5 @@ spring.application.name=auth
 spring.datasource.url= jdbc:postgresql://localhost:5432/product
 spring.datasource.username=postgres
 spring.datasource.password=120619
+
+api.security.token.secret = ${JWT_SECRET:my-secret-key}
